package debug

import (
	"context"

	desc "github.com/meetmorrowsolonmars/openpgl/settings/internal/pb/api/v1/debug"
)

func (i *Implementation) ProduceUpsertSettingsEvent(ctx context.Context, request *desc.ProduceUpsertSettingsEventRequest) (*desc.ProduceUpsertSettingsEventResponse, error) {
	//TODO implement me
	panic("implement me")
}
